force-app/main/default/objects/Contact/fields/ECP_Contact_Role__c.field-meta.xml
<CustomField>
            <fullName>ECP_Contact_Role__c</fullName>
            <label>Contact Role</label>
            <description>Role of this contact in the buying process and decision-making hierarchy</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Decision_Maker</fullName>
                        <label>Decision Maker</label>
                    </value>
                    
                    <value>
                        <fullName>Influencer</fullName>
                    </value>
                    
                    <value>
                        <fullName>End_User</fullName>
                        <label>End User</label>
                    </value>
                    
                    <value>
                        <fullName>Champion</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>