force-app/main/default/objects/Contact/fields/ECP_Engagement_Level__c.field-meta.xml
<CustomField>
            <fullName>ECP_Engagement_Level__c</fullName>
            <label>Engagement Level</label>
            <description>Level of engagement and interaction intensity with this contact</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>High</fullName>
                    </value>
                    
                    <value>
                        <fullName>Medium</fullName>
                    </value>
                    
                    <value>
                        <fullName>Low</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>