force-app/main/default/objects/Contact/fields/ECP_Last_Contact_Date__c.field-meta.xml
<CustomField>
            <fullName>ECP_Last_Contact_Date__c</fullName>
            <label>Last Contact Date</label>
            <description>Date of the most recent interaction or communication with this contact</description>
            <type>Date</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>