force-app/main/default/objects/Contact/fields/ECP_LinkedIn_Profile__c.field-meta.xml
<CustomField>
            <fullName>ECP_LinkedIn_Profile__c</fullName>
            <label>LinkedIn Profile</label>
            <description>URL link to this contact&#x27;s LinkedIn profile page</description>
            <type>Url</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>