force-app/main/default/objects/Contact/fields/ECP_Preferred_Contact_Method__c.field-meta.xml
<CustomField>
            <fullName>ECP_Preferred_Contact_Method__c</fullName>
            <label>Preferred Contact Method</label>
            <description>Preferred method of communication for reaching this contact</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Email</fullName>
                    </value>
                    
                    <value>
                        <fullName>Phone</fullName>
                    </value>
                    
                    <value>
                        <fullName>LinkedIn</fullName>
                    </value>
                    
                    <value>
                        <fullName>In_Person</fullName>
                        <label>In-Person</label>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>